# streamie.live

./: Cargo.toml  README.md  Rocket.toml
src/: administration.rs  chat.rs  database.rs  main.rs  security.rs  sessions.rs  usermanagement.rs
static/: datenschutz.html  manifest.webmanifest  streamie.css
templates/: error.html.tera  index.html.tera  internal_error.html.tera  login.html.tera  not_found.html.tera  unauthorized.html.tera
templates/admin/: create_session.html.tera  delete_session.html.tera  update_session.html.tera
templates/layout/: header.html.tera  navbar_begin.html.tera  navbar_end.html.tera
templates/sessions/: admin.html.tera  events.html.tera  session.html.tera
templates/user/: management.html.tera
