[package]
name = "rust_stream_service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
base64 = "0.13"
crypto-common = "0.1"
digest = "0.10"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
serde_json = "1.0"
jwt = "0.16.0"
mongodb = "2.2.2"
tokio = "1.19.1"
serde = {version = "1.0.137", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
futures = "0.3.21"
figment = "0.10.6"
multer = "2.0.2"
cookie = "0.16.0"
captcha = "0.0.9"
captcha-rs = "0.2.6"
rand = "0.8.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]


